Agrego Modificaciones para la entrega del proyecto final

--- a/views/precios.html
+++ b/views/precios.html
@@ -223,7 +223,7 @@
             </div>
         </main>
         
-        <section>
+        <section class="contenedorLado--modificado">
             <div class="contenedorLado"><!--Aside contenedor del lado derecho que se define con una clase y en css es transformado con una grilla para la zona de los descuentos-->
                 <aside>
                     <div class="subtituloLado">
@@ -231,77 +231,115 @@
                             DESCUENTOS
                         </h3>
                     </div>
-                    <article class="cardPrecio">
+                    <article class="cardPrecioDescuentos">
                         <img src="../img/fornite.jpg" alt="imagenfonite">
-                        <div class="textCambio">
+                        <div class="textDescuentos">
                             <h3> Fornite </h3>
-                            <p class="precio"> Price USD <span> 18.60 </span> <br> Now 8.60</p>
+                            <p class="descuentos"> Price USD <span> 18.60 </span> <br> Now 8.60</p>
                         </div>
                     </article>
-                    <article class="cardPrecio">
+                    <article class="cardPrecioDescuentos">
                         <img src="../img/ghost.jpg" alt="imagenghost">
-                        <div class="textCambio">
+                        <div class="textDescuentos">
                             <h3> Ghost of Tsushima </h3>
-                            <p class="precio"> Price USD <span> 22.10 </span> <br> Now 12.10</p>
+                            <p class="descuentos"> Price USD <span> 22.10 </span> <br> Now 12.10</p>
                         </div>
                     </article>
-                    <article class="cardPrecio">
+                    <article class="cardPrecioDescuentos">
                         <img src="../img/Spidermanmiles.jpg" alt="imagenspidermiles">
-                        <div class="textCambio">
+                        <div class="textDescuentos">
                             <h3> Spiderman Miles </h3>
-                            <p class="precio"> Price USD <span> 23.70 </span> <br> Now 13.00</p>
+                            <p class="descuentos"> Price USD <span> 23.70 </span> <br> Now 13.00</p>
                         </div>
                     </article>
-                    <article class="cardPrecio">
+                    <article class="cardPrecioDescuentos">
                         <img src="../img/days.jpg" alt="imagendays">
-                        <div class="textCambio">
+                        <div class="textDescuentos">
                             <h3> Days Gone </h3>
-                            <p class="precio"> Price USD <span> 29.90</span> <br> Now 19.90</p>
+                            <p class="descuentos"> Price USD <span> 29.90</span> <br> Now 19.90</p>
                         </div>
                     </article>
-                    <article class="cardPrecio">
+                    <article class="cardPrecioDescuentos">
                         <img src="../img/crash-ban.jpg" alt="imagencrash">
-                        <div class="textCambio">
+                        <div class="textDescuentos">
                             <h3> Crash Bandicoot <br> It´s About Time </h3>
-                            <p class="precio"> Price USD <span> 30.99</span> <br> Now 20.00</p>
+                            <p class="descuentos"> Price USD <span> 30.99</span> <br> Now 20.00</p>
                         </div>
                     </article>
-                    <article class="cardPrecio">
+                    <article class="cardPrecioDescuentos">
                         <img src="../img/Ghost-Recon.jpg" alt="imagenrecon">
-                        <div class="textCambio">
+                        <div class="textDescuentos">
                             <h3> MLB the show </h3>
-                            <p class="precio"> Price USD <span>23.00</span> <br> Now 13.00</p>
+                            <p class="descuentos"> Price USD <span>23.00</span> <br> Now 13.00</p>
                         </div>
                     </article>
                 </aside>
             </div>
         </section>    
+
         <div class="widgets1"><!--esta es la zona de los widgets que muestra la zona de las imagenes inferiores-->
             <article>
-                <p>  </p>
+                
             </article>
         </div>
         <div class="widgets2">    
             <article>
-                <p> </p>
+            
             </article>
-        </div>
+        </div> 
     </div>
     
-    <footer><!--Definición del Footer-->
-        <div class="red--modificado">
-            <ul>
-                <li class="lista__redes"><a href="https://www.instagram.com/"><img src="../img/Instagram.png"alt="icono1"></a></li>           
-                <li class="lista__redes"><a href="https://web.whatsapp.com/"><img src="../img/Whatsapp.png" alt="icono2"></a></li> 
-                <li class="lista__redes"><a href="https://www.facebook.com/"><img src="../img/facebook.png" alt="icono3"></a></li>
-                <li class="lista__redes"><a href="https://twitter.com/?lang=es"><img src="../img/twitter.png" alt="icono4"></a></li>
-
-                <div class="texto--footer">
-                    <p>Términos de uso y Condiciones <br> © Derechos Reservados </p>
+    
+    <footer class="footerPrecios" class="page-footer font-small special-color-dark pt-4">
+        <!-- Footer Elements -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <!-- Social buttons -->
+                    <ul class="list-unstyled list-inline text-center">
+                        <li class="list-inline-item">
+                            <a class="btn-floating btn-fb mx-1">
+                                <a href="https://www.facebook.com/"><img src="../img/facebook.png" alt="facebook"></a>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn-floating btn-ws mx-1">
+                                <a href="https://web.whatsapp.com/"><img src="../img/Whatsapp.png" alt="whatsapp"></a>
+                            </a>  
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn-floating btn-tw mx-1">
+                                <a href="https://twitter.com/?lang=es"><img src="../img/twitter.png" alt="twitter"></a>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn-floating btn-in mx-1">
+                                <a href="https://www.instagram.com/play.gamesshop03/?hl=es-la"><img src="../img/Instagram.png" alt="instagram"></a>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn-floating btn-gh mx-1">
+                                <a href="https://github.com/"><img src="../img/github.png" alt="github"></a>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn-floating btn-li mx-1">
+                                <a href="https://www.linkedin.com/"><img src="../img/linkedin.png" alt="linkedin"></a>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
-            </ul>
+            </div>    
         </div>
-    </footer>
+            
+            <!-- Copyright -->
+            <div class="footer-copyright text-center py-1">
+                <p>Términos de uso y Condiciones <br> © Derechos Reservados </p>
+            </div>
+            <!-- Copyright -->
+        
+        </footer>
+        <!-- Footer -->
     
     <!--Zona de scripts donde se conectan con el boostrapt, aos y conexion con javascript-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
