--- a/assets/css/archivo.css
+++ b/assets/css/archivo.css
@@ -318,7 +318,7 @@ footer {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4 auto);
+  grid-template-rows: repeat(4, auto);
   grid-template-areas: "contenedorImg contenedorImg contenedorImg contenedorLado" " contenedorImg contenedorImg contenedorImg contenedorLado" " widgets1 widgets2  contenedorLado contenedorLado" " widgets1 widgets2  contenedorLado contenedorLado"; }
 
 #contenedor_Precios > .contenedorImg,
