--- a/views/contactos.html
+++ b/views/contactos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,35 +22,35 @@
 <body class="body__fondoCont">
     <header>
         <!--Menu de la pagina-->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-color">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-color">
             <a class="navbar-brand" href="../index.html">PLAYGAMES<img src="../img/espada.png" alt="imagenespada"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-    
+
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../views/clasesdejuegos.html">Clases de Juegos</a>
+                        <a class="nav-link" href="./clasesdejuegos.html">Clases de Juegos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../views/precios.html">Precios</a>
+                        <a class="nav-link" href="./precios.html">Precios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../views/noticias.html">Noticias</a>
+                        <a class="nav-link" href="./noticias.html">Noticias</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../views/contactos.html">Contactos</a>
+                        <a class="nav-link" href="./contactos.html">Contactos</a>
                     </li>
                 </ul>
             </div>
         </nav>
         <!--Fin del menu-->
-    </header>
-    
+    </header>     
+    <main> 
         <!--Comienzo del formulario-->
         <form>
             <h2 class="titulo_Contacto">
@@ -95,20 +95,57 @@
         </form>
         <!--Fin del formulario-->
 
-        <footer><!--Definición del Footer-->
-            <div class="red--modificado">
-                <ul>
-                    <li class="lista__redes"><a href="https://www.instagram.com/"><img src="../img/Instagram.png"alt="icono1"></a></li>           
-                    <li class="lista__redes"><a href="https://web.whatsapp.com/"><img src="../img/Whatsapp.png" alt="icono2"></a></li> 
-                    <li class="lista__redes"><a href="https://www.facebook.com/"><img src="../img/facebook.png" alt="icono3"></a></li>
-                    <li class="lista__redes"><a href="https://twitter.com/?lang=es"><img src="../img/twitter.png" alt="icono4"></a></li>
-    
-                    <div class="texto--footer">
+            <!-- Footer -->
+            <footer class="footerContactos" class="page-footer font-small special-color-dark pt-4">
+                <!-- Footer Elements -->
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <!-- Social buttons -->
+                            <ul class="list-unstyled list-inline text-center">
+                                <li class="list-inline-item">
+                                    <a class="btn-floating btn-fb mx-1">
+                                        <a href="https://www.facebook.com/"><img src="../img/facebook.png" alt="facebook"></a>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a class="btn-floating btn-ws mx-1">
+                                        <a href="https://web.whatsapp.com/"><img src="../img/Whatsapp.png" alt="whatsapp"></a>
+                                    </a>  
+                                </li>
+                                <li class="list-inline-item">
+                                    <a class="btn-floating btn-tw mx-1">
+                                        <a href="https://twitter.com/?lang=es"><img src="../img/twitter.png" alt="twitter"></a>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a class="btn-floating btn-in mx-1">
+                                        <a href="https://www.instagram.com/play.gamesshop03/?hl=es-la"><img src="../img/Instagram.png" alt="instagram"></a>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a class="btn-floating btn-gh mx-1">
+                                        <a href="https://github.com/"><img src="../img/github.png" alt="github"></a>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a class="btn-floating btn-li mx-1">
+                                        <a href="https://www.linkedin.com/"><img src="../img/linkedin.png" alt="linkedin"></a>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>    
+                </div>
+                    
+                    <!-- Copyright -->
+                    <div class="footer-copyright text-center py-1">
                         <p>Términos de uso y Condiciones <br> © Derechos Reservados </p>
                     </div>
-                </ul>
-            </div>
-        </footer>
+                    <!-- Copyright -->
+                
+                </footer>
+                <!-- Footer -->
 
         <!--Zona de scripts conectados por javascript y boostrapt-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
