Corrijo unos errores que habia cometido al subir los anteriores archivos

--- a/assets/scss/archivo.scss
+++ b/assets/scss/archivo.scss
@@ -526,10 +526,7 @@ footer{
             font-family: 'Noto Sans', sans-serif;
             font-size: 15px;
             background-size: auto;
-            
-            span{
-                text-decoration: 2px line-through;
-            }
+            margin-bottom: 100px;
         }
     }
 }
